# MEgine

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/mengine-assets/: Cargo.toml
crates/mengine-assets/src/: animation.rs  animator.rs  asset_sidecar.rs  avatar_mask.rs  gltf_import.rs  lib.rs  material.rs  material_instance.rs  registry.rs  sprite.rs  surface_shader.rs  texture.rs  timeline.rs
crates/mengine-audio/: Cargo.toml
crates/mengine-audio/src/: lib.rs
crates/mengine-core/: Cargo.toml
crates/mengine-core/src/: command.rs  component.rs  entity.rs  handle.rs  hierarchy.rs  lib.rs  physics_query.rs  query.rs  schedule.rs  snapshot.rs  surface_shader.rs  time.rs  transform_hierarchy.rs  world.rs
crates/mengine-editor-host/: Cargo.toml
crates/mengine-editor-host/src/: gizmo.rs  lib.rs  project.rs  session.rs  undo.rs
crates/mengine-idl/: Cargo.toml
crates/mengine-idl/src/: emit.rs  main.rs  parse.rs
crates/mengine-jobs/: Cargo.toml
crates/mengine-jobs/src/: lib.rs  profiler.rs
crates/mengine-physics/: Cargo.toml
crates/mengine-physics/src/: lib.rs  physics2d.rs
crates/mengine-platform/: Cargo.toml
crates/mengine-platform/src/: input.rs  lib.rs
crates/mengine-rhi/: Cargo.toml
crates/mengine-rhi/src/: ibl.rs  lib.rs  mesh.rs  post_process.rs  render_graph.rs  renderer.rs  sky.rs  ui.rs
crates/mengine-runtime/: Cargo.toml
crates/mengine-runtime/src/: animation.rs  audio.rs  build_manifest.rs  camera2d.rs  lib.rs  lighting2d.rs  main.rs  materials.rs  meshes.rs  mobile_stub.rs  particles.rs  player_config.rs  prefabs.rs  scenes.rs  sorting.rs  sprites.rs  textures.rs  timeline.rs  ui.rs
crates/mengine-scene/: Cargo.toml
crates/mengine-scene/src/: entity_reference.rs  lib.rs  prefab.rs  scene_file.rs
crates/mengine-script/: Cargo.toml
crates/mengine-script/src/: bridge.rs  lib.rs
docs/: api-guidelines.md  architecture.md  behaviour-guidelines.md  jenkins-workbench-technical-design.md  mengine-2d-3d-rendering-upgrade.md  mengine-2d-components-and-engine-refactor.md  mengine-dock-particles-spine-technical-design.md  mengine-editor-ai-agent-technical-design.md  mengine-local-editor-technical-design.md  runtime-scripting.md
docs/designs/: unity-editor_design_system.md
idl/commands/: world.idl
idl/components/: core.idl  ui.idl
idl/resources/: assets.idl
samples/: .gitignore  README.md  tsconfig.json
samples/hello-triangle/: main.ts
samples/spinning-cube/: main.ts  project.json  scene.mscene
samples/spinning-cube/Assets/Scenes/: Main.mscene
samples/spinning-cube/Assets/Scripts/: Main.ts  mengine.d.ts
samples/spinning-cube/ProjectSettings/: sorting-layers.json
samples/types/: engine.d.ts
scripts/: build-editor-exe.cmd  build-samples.js  dev-editor.cmd  install-editor-build-env.cmd  prepare-editor-build-sdk.mjs
