[workspace]
resolver = "2"
members = [
    "crates/mengine-core",
    "crates/mengine-rhi",
    "crates/mengine-assets",
    "crates/mengine-scene",
    "crates/mengine-script",
    "crates/mengine-platform",
    "crates/mengine-idl",
    "crates/mengine-runtime",
    "crates/mengine-editor-host",
    "crates/mengine-jobs",
    "crates/mengine-audio",
    "crates/mengine-physics",
    "packages/editor/src-tauri",
]
default-members = [
    "crates/mengine-runtime",
    "crates/mengine-idl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MEngine"]

[workspace.dependencies]
mengine-core     = { path = "crates/mengine-core" }
mengine-rhi      = { path = "crates/mengine-rhi" }
mengine-assets   = { path = "crates/mengine-assets" }
mengine-scene    = { path = "crates/mengine-scene" }
mengine-script   = { path = "crates/mengine-script" }
mengine-platform = { path = "crates/mengine-platform" }
mengine-idl      = { path = "crates/mengine-idl" }
mengine-jobs     = { path = "crates/mengine-jobs" }
mengine-audio    = { path = "crates/mengine-audio" }
mengine-physics  = { path = "crates/mengine-physics" }

glam       = { version = "0.29", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck   = { version = "1", features = ["derive"] }
thiserror  = "2"
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
wgpu       = "24"
winit      = "0.30"
pollster   = "0.4"
raw-window-handle = "0.6"
boa_engine = "0.20"
clap       = { version = "4", features = ["derive"] }
walkdir    = "2"
heck       = "0.5"
image      = "0.25"
gltf       = "1"
rayon      = "1"
parking_lot = "0.12"
uuid       = { version = "1", features = ["v4", "serde"] }
rapier3d   = "0.34"
rapier2d   = "0.34"
kira       = "0.12.2"
mint       = "0.5"
sha2       = "0.10"

[profile.release]
lto = true
codegen-units = 1
