[package]
name = "mengine-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MEngine asset handles, loading, import cache"

[dependencies]
mengine-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
uuid.workspace = true
image.workspace = true
gltf.workspace = true
parking_lot.workspace = true
walkdir.workspace = true
