[package]
name = "mengine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MEngine world, ECS, schedule, math"

[dependencies]
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
uuid.workspace = true
