[package]
name = "mengine-editor-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MEngine editor host: commands, viewport, undo"

[dependencies]
mengine-core.workspace = true
mengine-rhi.workspace = true
mengine-assets.workspace = true
mengine-scene.workspace = true
mengine-script.workspace = true
mengine-platform.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
glam.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
