[package]
name = "mengine-idl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MEngine IDL parser and codegen"
autobins = true

[[bin]]
name = "mengine-idl"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
heck.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
